pod-security/baseline/restrict-apparmor-profiles/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-apparmor-profiles
policies:
- ../restrict-apparmor-profiles.yaml
resources:
- resource.yaml
results:
- kind: CronJob
  policy: restrict-apparmor-profiles
  resources:
  - badcronjob01
  result: fail
  rule: app-armor
- kind: Deployment
  policy: restrict-apparmor-profiles
  resources:
  - baddeployment01
  result: fail
  rule: app-armor
- kind: Pod
  policy: restrict-apparmor-profiles
  resources:
  - badpod01
  result: fail
  rule: app-armor
- kind: CronJob
  policy: restrict-apparmor-profiles
  resources:
  - badcronjob02
  result: fail
  rule: app-armor-native-pod
- kind: Deployment
  policy: restrict-apparmor-profiles
  resources:
  - baddeployment02
  result: fail
  rule: app-armor-native-pod
- kind: Pod
  policy: restrict-apparmor-profiles
  resources:
  - badpod02
  result: fail
  rule: app-armor-native-pod
- kind: CronJob
  policy: restrict-apparmor-profiles
  resources:
  - badcronjob03
  result: fail
  rule: app-armor-native-containers
- kind: Deployment
  policy: restrict-apparmor-profiles
  resources:
  - baddeployment03
  result: fail
  rule: app-armor-native-containers
- kind: Pod
  policy: restrict-apparmor-profiles
  resources:
  - badpod03
  result: fail
  rule: app-armor-native-containers
- kind: Pod
  policy: restrict-apparmor-profiles
  resources:
  - badpod04
  result: fail
  rule: app-armor-native-containers
- kind: CronJob
  policy: restrict-apparmor-profiles
  resources:
  - goodcronjob01
  - goodcronjob02
  - goodcronjob03
  result: pass
  rule: app-armor
- kind: Deployment
  policy: restrict-apparmor-profiles
  resources:
  - gooddeployment01
  - gooddeployment02
  - gooddeployment03
  result: pass
  rule: app-armor
- kind: Pod
  policy: restrict-apparmor-profiles
  resources:
  - goodpod01
  - goodpod02
  - goodpod03
  result: pass
  rule: app-armor
- kind: CronJob
  policy: restrict-apparmor-profiles
  resources:
  - goodcronjob04
  result: pass
  rule: app-armor-native-pod
- kind: Deployment
  policy: restrict-apparmor-profiles
  resources:
  - gooddeployment04
  result: pass
  rule: app-armor-native-pod
- kind: Pod
  policy: restrict-apparmor-profiles
  resources:
  - goodpod04
  result: pass
  rule: app-armor-native-pod
- kind: CronJob
  policy: restrict-apparmor-profiles
  resources:
  - goodcronjob05
  result: pass
  rule: app-armor-native-containers
- kind: Deployment
  policy: restrict-apparmor-profiles
  resources:
  - gooddeployment05
  result: pass
  rule: app-armor-native-containers
- kind: Pod
  policy: restrict-apparmor-profiles
  resources:
  - goodpod05
  result: pass
  rule: app-armor-native-containers
- kind: Pod
  policy: restrict-apparmor-profiles
  resources:
  - goodpod06
  result: pass
  rule: app-armor-native-containers
